Removed solutions from notebooks

--- a/W1/Practica/02 - Introduccion a python.ipynb
+++ b/W1/Practica/02 - Introduccion a python.ipynb
@@ -192,7 +192,7 @@
     "    \"\"\"\n",
     "    Esta función me devuelve la división entre a y b\n",
     "    \"\"\"\n",
-    "    resultado = a / b\n",
+    "    resultado = # your code goes here\n",
     "    return resultado"
    ]
   },
@@ -377,9 +377,11 @@
    "source": [
     "# Accede al elemento de la lista_mixta que contiene 'Hola'\n",
     "\n",
-    "print(lista_mixta[3])\n",
+    "## desde el indice 0\n",
+    "print(# your code goes here)\n",
     "\n",
-    "print(lista_mixta[-1])"
+    "## desde el último valorr\n",
+    "print(# your code goes here)"
    ]
   },
   {
@@ -422,7 +424,7 @@
     "# Crea una lista a partir de lista_mixta que no contega la palabra 'Hola'\n",
     "# y asignala a una nueva variable llamada lista_nueva\n",
     "\n",
-    "lista_nueva = lista_mixta[:3]\n",
+    "lista_nueva = # your code goes here\n",
     "print(lista_nueva)\n"
    ]
   },
@@ -458,7 +460,8 @@
    ],
    "source": [
     "# Comprueba que 'Hola' no está en lista_nueva\n",
-    "'Hola' in lista_nueva"
+    "\n",
+    "# your code goes here"
    ]
   },
   {
@@ -529,7 +532,7 @@
    "outputs": [],
    "source": [
     "## Crea una tupla e intenta modificar un de sus valores\n",
-    "mi_tupla = (2, 3)\n"
+    "mi_tupla = # your code goes here\n"
    ]
   },
   {
@@ -575,17 +578,17 @@
     "    \"\"\"\n",
     "    Devuelve la suma y el producto\n",
     "    \"\"\"\n",
-    "    suma = a + b\n",
-    "    producto = a * b\n",
+    "    suma = # your code goes here\n",
+    "    producto = # your code goes here\n",
     "    return suma, producto\n",
     "\n",
     "## Asigna a una variable el retorno de la funcion\n",
     "\n",
-    "resultado = suma_y_producto(2, 3)\n",
+    "resultado = # your code goes here\n",
     "\n",
     "## Asigna a dos variables el retorno de la funcion\n",
     "\n",
-    "suma_2_3, producto_2_3 = suma_y_producto(2, 3)\n",
+    "suma_2_3, producto_2_3 = # your code goes here\n",
     "\n",
     "\n",
     "\n",
@@ -635,12 +638,19 @@
     "\n",
     "# que nota ha sacado María ?\n",
     "\n",
-    "# notas['Maria']\n",
+    "print(# your code goes here)\n",
     "\n",
     "# Qué pasa si intentamos acceder a un nombre que no existe?\n",
     "\n",
-    "# notas['juan']\n",
-    "\n",
+    "print(notas['pepe'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Prueba ahora con notas.get('pepe'), ves alguna diferencia?\n",
     "\n",
     "print(notas.get('pepe'))"
@@ -729,9 +739,9 @@
     "    Devulve la raiz cuadrad\n",
     "    \"\"\"\n",
     "    if a > 0:\n",
-    "        raiz_a = sqrt(a)\n",
+    "        ## your code goes here\n",
     "    else:\n",
-    "        raiz_a = 0\n",
+    "        ## your code goes here\n",
     "    \n",
     "    return raiz_a\n",
     "\n"
@@ -789,11 +799,13 @@
    "source": [
     "## Inicializa una lista vacia\n",
     "lista_3 = []\n",
+    "\n",
     "## Crea un bucle que vaya desde el 0 al 10 y si es un\n",
     "## número par lo añada a la lista anterior multiplicado por 2\n",
     "for elemento in range(11):\n",
     "    if elemento % 2 == 0:\n",
-    "        lista_3.append(2*elemento)\n",
+    "        new_element = ## your code goes here\n",
+    "        lista_3.append(new_element)\n",
     "    else:\n",
     "        continue\n",
     "\n",
@@ -837,16 +849,16 @@
     "word_lengths = []\n",
     "for word in words:\n",
     "      if word != \"the\":\n",
-    "          word_lengths.append(len(word))\n",
+    "            word_lengths.append(len(word))\n",
     "print(word_lengths)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Py37 (ds-uib)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ds-uib"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -858,7 +870,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
