--- a/W1/Practica/03 - Introducción a Numpy y Matplotlib.ipynb
+++ b/W1/Practica/03 - Introducción a Numpy y Matplotlib.ipynb
@@ -188,9 +188,9 @@
     "mi_lista_anidada = [[1, 2, 3],\n",
     "                    [4, 5, 6]]\n",
     "\n",
-    "array_1D = np.array(mi_lista)\n",
+    "array_1D = ## your code goes here\n",
     "\n",
-    "array_2D = np.array(mi_lista_anidada)"
+    "array_2D = ## your code goes here"
    ]
   },
   {
@@ -265,226 +265,14 @@
     "## crea un array de 200 filas y 3 columnas aleatorio que siga una distribución\n",
     "## de poisson\n",
     "\n",
-    "x_pois = np.random.poisson(lam=2., size=(200, 3))"
+    "x_pois = ## your code goes here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[3, 3, 4],\n",
-       "       [4, 1, 2],\n",
-       "       [1, 1, 4],\n",
-       "       [2, 3, 0],\n",
-       "       [6, 2, 4],\n",
-       "       [0, 5, 1],\n",
-       "       [3, 3, 5],\n",
-       "       [1, 3, 2],\n",
-       "       [1, 2, 2],\n",
-       "       [6, 3, 3],\n",
-       "       [1, 2, 2],\n",
-       "       [3, 0, 2],\n",
-       "       [2, 1, 3],\n",
-       "       [0, 3, 0],\n",
-       "       [1, 3, 0],\n",
-       "       [3, 1, 3],\n",
-       "       [2, 1, 5],\n",
-       "       [1, 3, 4],\n",
-       "       [1, 4, 0],\n",
-       "       [5, 4, 3],\n",
-       "       [3, 2, 1],\n",
-       "       [3, 3, 3],\n",
-       "       [2, 2, 2],\n",
-       "       [3, 1, 1],\n",
-       "       [1, 2, 0],\n",
-       "       [1, 1, 1],\n",
-       "       [3, 4, 4],\n",
-       "       [3, 6, 1],\n",
-       "       [1, 1, 3],\n",
-       "       [2, 1, 4],\n",
-       "       [3, 5, 0],\n",
-       "       [2, 2, 3],\n",
-       "       [1, 2, 1],\n",
-       "       [0, 0, 1],\n",
-       "       [4, 3, 3],\n",
-       "       [1, 2, 1],\n",
-       "       [1, 1, 2],\n",
-       "       [2, 1, 2],\n",
-       "       [1, 3, 2],\n",
-       "       [1, 0, 6],\n",
-       "       [0, 2, 4],\n",
-       "       [0, 0, 0],\n",
-       "       [2, 3, 3],\n",
-       "       [2, 0, 3],\n",
-       "       [1, 1, 4],\n",
-       "       [3, 3, 3],\n",
-       "       [3, 1, 3],\n",
-       "       [1, 1, 1],\n",
-       "       [3, 3, 1],\n",
-       "       [2, 1, 4],\n",
-       "       [2, 1, 0],\n",
-       "       [2, 1, 3],\n",
-       "       [4, 3, 4],\n",
-       "       [4, 2, 1],\n",
-       "       [2, 0, 2],\n",
-       "       [1, 1, 2],\n",
-       "       [2, 1, 5],\n",
-       "       [2, 5, 4],\n",
-       "       [3, 1, 2],\n",
-       "       [0, 0, 1],\n",
-       "       [4, 1, 2],\n",
-       "       [4, 1, 1],\n",
-       "       [2, 2, 3],\n",
-       "       [2, 4, 2],\n",
-       "       [4, 4, 2],\n",
-       "       [1, 1, 1],\n",
-       "       [2, 4, 3],\n",
-       "       [2, 0, 0],\n",
-       "       [2, 3, 3],\n",
-       "       [0, 2, 0],\n",
-       "       [0, 2, 0],\n",
-       "       [4, 1, 3],\n",
-       "       [2, 0, 1],\n",
-       "       [3, 7, 2],\n",
-       "       [1, 0, 1],\n",
-       "       [1, 0, 5],\n",
-       "       [1, 2, 1],\n",
-       "       [2, 4, 1],\n",
-       "       [1, 0, 2],\n",
-       "       [4, 3, 3],\n",
-       "       [2, 1, 3],\n",
-       "       [4, 1, 2],\n",
-       "       [4, 1, 2],\n",
-       "       [0, 4, 3],\n",
-       "       [3, 3, 0],\n",
-       "       [5, 3, 1],\n",
-       "       [1, 2, 2],\n",
-       "       [1, 1, 0],\n",
-       "       [2, 4, 0],\n",
-       "       [0, 0, 2],\n",
-       "       [4, 4, 2],\n",
-       "       [1, 3, 2],\n",
-       "       [1, 2, 1],\n",
-       "       [3, 2, 1],\n",
-       "       [1, 1, 1],\n",
-       "       [6, 2, 0],\n",
-       "       [3, 3, 1],\n",
-       "       [4, 2, 3],\n",
-       "       [5, 0, 2],\n",
-       "       [3, 3, 3],\n",
-       "       [3, 4, 5],\n",
-       "       [1, 4, 3],\n",
-       "       [2, 2, 3],\n",
-       "       [1, 3, 1],\n",
-       "       [3, 2, 0],\n",
-       "       [0, 3, 0],\n",
-       "       [4, 3, 0],\n",
-       "       [1, 1, 2],\n",
-       "       [1, 3, 3],\n",
-       "       [3, 0, 1],\n",
-       "       [0, 2, 2],\n",
-       "       [1, 2, 1],\n",
-       "       [1, 1, 0],\n",
-       "       [0, 3, 2],\n",
-       "       [1, 2, 2],\n",
-       "       [3, 1, 2],\n",
-       "       [3, 1, 1],\n",
-       "       [5, 1, 1],\n",
-       "       [0, 2, 1],\n",
-       "       [1, 1, 6],\n",
-       "       [2, 2, 2],\n",
-       "       [3, 1, 2],\n",
-       "       [3, 2, 1],\n",
-       "       [2, 3, 1],\n",
-       "       [1, 3, 6],\n",
-       "       [0, 1, 2],\n",
-       "       [0, 3, 1],\n",
-       "       [5, 3, 4],\n",
-       "       [3, 2, 4],\n",
-       "       [2, 2, 4],\n",
-       "       [0, 1, 0],\n",
-       "       [1, 2, 2],\n",
-       "       [3, 1, 1],\n",
-       "       [2, 2, 2],\n",
-       "       [3, 1, 2],\n",
-       "       [1, 4, 4],\n",
-       "       [2, 4, 4],\n",
-       "       [1, 1, 2],\n",
-       "       [1, 2, 2],\n",
-       "       [2, 1, 2],\n",
-       "       [4, 1, 2],\n",
-       "       [2, 0, 3],\n",
-       "       [1, 4, 0],\n",
-       "       [3, 2, 2],\n",
-       "       [0, 1, 1],\n",
-       "       [3, 0, 0],\n",
-       "       [3, 1, 0],\n",
-       "       [4, 2, 0],\n",
-       "       [1, 7, 4],\n",
-       "       [2, 2, 0],\n",
-       "       [2, 3, 2],\n",
-       "       [3, 2, 2],\n",
-       "       [1, 3, 1],\n",
-       "       [0, 2, 4],\n",
-       "       [1, 1, 1],\n",
-       "       [3, 2, 4],\n",
-       "       [2, 3, 1],\n",
-       "       [1, 1, 2],\n",
-       "       [0, 1, 3],\n",
-       "       [1, 0, 4],\n",
-       "       [3, 1, 0],\n",
-       "       [1, 1, 1],\n",
-       "       [3, 2, 5],\n",
-       "       [3, 2, 1],\n",
-       "       [2, 0, 5],\n",
-       "       [1, 1, 1],\n",
-       "       [3, 1, 4],\n",
-       "       [1, 5, 2],\n",
-       "       [2, 0, 3],\n",
-       "       [1, 3, 3],\n",
-       "       [0, 1, 1],\n",
-       "       [2, 4, 2],\n",
-       "       [2, 4, 1],\n",
-       "       [1, 1, 3],\n",
-       "       [2, 1, 0],\n",
-       "       [1, 1, 3],\n",
-       "       [1, 3, 2],\n",
-       "       [0, 1, 1],\n",
-       "       [2, 2, 2],\n",
-       "       [3, 0, 2],\n",
-       "       [1, 1, 3],\n",
-       "       [4, 3, 3],\n",
-       "       [5, 3, 7],\n",
-       "       [2, 2, 0],\n",
-       "       [0, 1, 2],\n",
-       "       [2, 3, 0],\n",
-       "       [0, 2, 2],\n",
-       "       [0, 5, 2],\n",
-       "       [3, 1, 3],\n",
-       "       [3, 2, 2],\n",
-       "       [2, 1, 2],\n",
-       "       [0, 2, 3],\n",
-       "       [0, 2, 2],\n",
-       "       [3, 1, 2],\n",
-       "       [3, 3, 1],\n",
-       "       [2, 5, 3],\n",
-       "       [7, 0, 3],\n",
-       "       [4, 1, 5],\n",
-       "       [4, 1, 2],\n",
-       "       [1, 0, 3]])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "x_pois"
    ]
@@ -518,9 +306,9 @@
    ],
    "source": [
     "## accede al primer, tercer y quinto elemento de x1.\n",
-    "print(x1[0])\n",
-    "print(x1[2])\n",
-    "print(x1[4])"
+    "print(x1[## your code goes here])\n",
+    "print(x1[## your code goes here])\n",
+    "print(x1[## your code goes here])"
    ]
   },
   {
@@ -541,7 +329,7 @@
    ],
    "source": [
     "## accede primer al elemento de la primera fila y segunda columna de x2\n",
-    "x2[0, 1]"
+    "x2[## your code goes here, ## your code goes here]"
    ]
   },
   {
@@ -604,7 +392,7 @@
    ],
    "source": [
     "## Crea un slice que contenga los 3 primeros elementos\n",
-    "a_3 = a[:3]\n",
+    "a_3 = ## your code goes here\n",
     "a_3"
    ]
   },
@@ -626,7 +414,7 @@
    ],
    "source": [
     "## Crea un slice que contenga los 2 ultimos elementos\n",
-    "a_last_2 = a[8:]\n",
+    "a_last_2 = ## your code goes here\n",
     "a_last_2"
    ]
   },
@@ -648,7 +436,8 @@
    ],
    "source": [
     "## Crea un slice que contenga los elementos uno si y uno no\n",
-    "a[:6:2]"
+    "\n",
+    "## your code goes here"
    ]
   },
   {
@@ -728,7 +517,7 @@
     "              [7, 6, 8, 8],\n",
     "              [1, 6, 7, 7]])\n",
     "\n",
-    "x[:, 0]"
+    "x[## your code goes here]"
    ]
   },
   {
@@ -749,7 +538,7 @@
    ],
    "source": [
     "## accede a la segunda columna\n",
-    "x[:, 1]"
+    "x[## your code goes here]"
    ]
   },
   {
@@ -771,7 +560,7 @@
    ],
    "source": [
     "## elimina la primera fila\n",
-    "x[1:, :]"
+    "x[## your code goes here]"
    ]
   },
   {
@@ -904,31 +693,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = np.random.choice(np.array([1, 2, 3]), size=(100,))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([6, 6, 3, 3, 9, 6, 3, 6, 9, 9, 3, 9, 3, 6, 3, 9, 6, 9, 6, 6, 6, 6,\n",
-       "       9, 3, 6, 9, 9, 9, 3, 9, 9, 3, 9, 9, 3, 3, 3, 6, 3, 6, 6, 3, 6, 9,\n",
-       "       9, 3, 6, 9, 6, 6, 9, 3, 6, 9, 3, 6, 6, 6, 6, 3, 6, 9, 9, 9, 3, 9,\n",
-       "       6, 6, 9, 3, 3, 6, 6, 9, 3, 9, 6, 6, 9, 3, 6, 6, 3, 6, 3, 3, 6, 9,\n",
-       "       6, 6, 6, 6, 9, 9, 9, 3, 9, 3, 6, 9])"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a*3"
+    "a = np.random.choice(## your code goes here)"
    ]
   },
   {
@@ -1001,9 +766,9 @@
    "source": [
     "# demuestra el teorema fundamental de la trigonometria\n",
     "\n",
-    "sin_x = np.sin(x)\n",
+    "sin_x = ## your code goes here\n",
     "\n",
-    "cos_x = np.cos(x)\n",
+    "cos_x = ## your code goes here\n",
     "\n",
     "sin_x**2 + cos_x**2"
    ]
@@ -1554,9 +1319,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Py37 (ds-uib)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ds-uib"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1568,7 +1333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
