--- a/W1/Practica/solutions/04.2 - Introducción a Pandas - merge.ipynb
+++ b/W1/Practica/solutions/04.2 - Introducción a Pandas - merge.ipynb
@@ -1083,9 +1083,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Py37 (ds-uib)",
+   "display_name": "2degree",
    "language": "python",
-   "name": "ds-uib"
+   "name": "2degree"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1097,7 +1097,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
