Added annotated pdfs

--- a/W1/Practica/02 - Introduccion a python.ipynb
+++ b/W1/Practica/02 - Introduccion a python.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,13 +192,13 @@
     "    \"\"\"\n",
     "    Esta función me devuelve la división entre a y b\n",
     "    \"\"\"\n",
-    "    resultado = # your code goes here\n",
+    "    resultado = a / b\n",
     "    return resultado"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
