Added pdf with Regularization

--- a/W3/Teoria/LR-regularization.ipynb
+++ b/W3/Teoria/LR-regularization.ipynb
@@ -44,10 +44,6 @@
    "source": [
     "## Linear Regression\n",
     "\n",
-    "Recordamos la grafica basica de los errores de una regresión lineal\n",
-    "\n",
-    "![$L^1$ versus $L^2$ regularization](img/linear_regression_error.gif)\n",
-    "\n",
     "La regresión lineal es posiblemente el modelo mas sencillo:\n",
     "\n",
     "$$f(X_{j \\cdot}) = \\sum_i \\beta_i X_{ji}$$\n",
@@ -62,12 +58,12 @@
     "\n",
     "Sin embargo, no conocemos ese beta. Tenemos que encontrarlos, dada la y, tenemos que encontrar betas que maximicen la probabilidad de beta condicionada a y: $P(\\beta_i \\mid y_j)$. Por lo que con la regla de bayes sabemos: \n",
     "\n",
-    "$$ P(\\beta_i \\mid y_j) = P(y_j \\mid \\beta_i) \\frac{P(\\beta_i)}{P(y_j)} \\,.$$\n",
+    "$$ P(\\beta_i \\mid y_j) = P(y_j \\mid \\beta_i) \\frac{P(\\beta_i)}{P(y_j)} \\,$$\n",
     "\n",
     "\n",
     "Sabemos también el primer termino de RHS, y $P(y_j)$ que es independiente de $\\beta_i$. De este modo, solamente $P(\\beta_i)$ es desconocido. En modelos de regresión lineal, suponemos que no tenemos un conocimiento de antemano o _prior_ como en bayes. De este modo, el modelo mas probable es determinado maximizando la función de likelihood: \n",
     "\n",
-    "$$ L(\\beta) = \\prod_j \\frac{1}{\\sqrt{2\\pi \\sigma^2}} \\exp \\left[-\\left( \\frac{X_{ji} \\cdot \\beta_i - y_j}{2 \\sigma} \\right)^2 \\right] \\propto P(\\beta_i \\mid y_j) \\,.$$\n",
+    "$$ L(\\beta) = \\prod_j \\frac{1}{\\sqrt{2\\pi \\sigma^2}} \\exp \\left[-\\left( \\frac{X_{ji} \\cdot \\beta_i - y_j}{2 \\sigma} \\right)^2 \\right] \\propto P(\\beta_i \\mid y_j) \\,$$\n",
     "\n",
     "**Ejercicios:** \n",
     "\n",
