File into chuncks

--- a/W6/practica/hotel_review_analysis.ipynb
+++ b/W6/practica/hotel_review_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4bf52993",
+   "id": "053e8d41",
    "metadata": {},
    "source": [
     "# Intro to ML"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eac7e5bf",
+   "id": "286583ad",
    "metadata": {},
    "source": [
     "La práctica de hoy consiste en un simulacro de como empezar un proyecto de analítica / Machine Learning desde el principio.\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7520e09a",
+   "id": "90de4743",
    "metadata": {},
    "source": [
     "## Trabajo por equipos"
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70f0af9f",
+   "id": "bae0d759",
    "metadata": {},
    "source": [
     "#### 1. Revisa el fichero `data_format.txt` para saber que variables tenemos disponibles. A partir de las variables, plantea al menos 3 preguntas que te permitan entender el dataset: por ejemplo:\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a25bd2b",
+   "id": "5a25e7b2",
    "metadata": {},
    "source": [
     "## Trabajo entregable"
@@ -59,10 +59,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b138097",
+   "id": "0c716115",
    "metadata": {},
    "source": [
-    "**Ahora que más o menos tenemos una idea inicial de como tratar el dataset..**\n",
+    "**Ahora que más o menos tenemos una idea inicial de como tratar el dataset...**\n",
+    "\n",
+    "NOTA: el objetivo es ver que sabemos usar los pipelines de sklear. No nos volvamos locos con hacer un trabajo completo.\n",
+    "\n",
     "1. Carga las librerías básicas para el analisis de datos\n",
     "1. Realiza una limpieza no exhaustiva de los datos\n",
     "1. Separa los datos en train y test. OJO: no queremos filtrar información! Hay que pensar bien como queremos hacer la separación...\n",
